--- a/homesdk_sample/app/build.gradle
+++ b/homesdk_sample/app/build.gradle
@@ -5,13 +5,13 @@ plugins {
 apply from : "thingMapping.gradle"
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.test007.demo"
+        applicationId "com.sr.demo"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -84,6 +84,12 @@ dependencies {
     implementation project(":ipc")
     implementation project(":sweeper")
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
+    
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
+
+    // The latest stable App SDK for Android.
+    implementation 'com.facebook.soloader:soloader:0.10.4+'
+    implementation 'com.thingclips.smart:thingsmart:5.5.2'
 
 
 }
