--- a/homesdk_sample/base_res/build.gradle
+++ b/homesdk_sample/base_res/build.gradle
@@ -5,13 +5,10 @@ plugins {
 
 android {
     compileSdkVersion 33
-    buildToolsVersion "29.0.3"
 
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -30,6 +27,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.tuya.appsdk.sample.resource'
 }
 
 dependencies {
