--- a/homesdk_sample/app/build.gradle
+++ b/homesdk_sample/app/build.gradle
@@ -6,7 +6,7 @@ apply from : "thingMapping.gradle"
 
 android {
     compileSdkVersion 33
-    buildToolsVersion "29.0.3"
+    588761
 
     defaultConfig {
         applicationId "com.sr.demo"
@@ -27,16 +27,12 @@ android {
             abiFilters "armeabi-v7a", "arm64-v8a"
         }
     }
-    lintOptions {
-        abortOnError false
+    packagingOptions {
+        jniLibs {
+            pickFirsts += ['lib/*/libc++_shared.so', 'lib/*/libgnustl_shared.so', 'lib/*/liblog.so', 'lib/*/libopenh264.so']
+        }
     }
 
-    packagingOptions {
-        pickFirst 'lib/*/libc++_shared.so' // 多个aar存在此so，需要选择第一个
-        pickFirst 'lib/*/libgnustl_shared.so'//业务包需要
-        pickFirst 'lib/*/liblog.so'
-        pickFirst 'lib/*/libopenh264.so'
-    }
 
     buildTypes {
         release {
@@ -51,6 +47,10 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    namespace 'com.tuya.appsdk.sample'
+    lint {
+        abortOnError false
     }
 
 }
