--- a/homesdk_sample/ipc/build.gradle
+++ b/homesdk_sample/ipc/build.gradle
@@ -10,8 +10,6 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -33,6 +31,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.tuya.smart.android.demo.camera'
 }
 
 dependencies {
