--- a/homesdk_sample/app/build.gradle
+++ b/homesdk_sample/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
 
     implementation 'com.alibaba:fastjson:1.1.67.android'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.9'
+    implementation 'commons-codec:commons-codec:1.16.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
 
     implementation project(':base_res')
